# mcio-vpt-example

./: .gitignore  README.md  env_test.py  environment.yml  main.py  minerl_wrapper.py  pyproject.toml  requirements.txt  run_steve1.py  run_vpt.py  utils.py  xvfbfixed.py
gym3/: types.py
src/mcio_agent/lib/: action_head.py  action_mapping.py  actions.py  gym3_types.py  masked_attention.py  mlp.py  normalize_ewma.py  policy.py  tree_util.py  util.py  xf.py
vpt/: agent.py  steve1_prior.py
vpt/lib/: action_head.py  action_mapping.py  actions.py  gym3_types.py  impala_cnn.py  masked_attention.py  minecraft_util.py  mlp.py  normalize_ewma.py  policy.py  scaled_mse_head.py  torch_util.py  util.py  xf.py
