[project]
name = "mcio_agent"
version = "0.1.0"
authors = [
    { name = "Jerry Xiong" },
    { name = "TwoTurtles", email = "97465192+twoturtles@users.noreply.github.com" },
]
description = "Support VPT and STEVE-1 on top of mcio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs",
    "einops",
    "gdown",
    "gymnasium",
    "mcio_ctrl",
    "mineclip @ git+https://github.com/jxiong21029/MineCLIP-model",
    "opencv-python",
    "torch",
    "tqdm",
    "xvfbwrapper",
]

[build-system]
requires = ["uv_build>=0.7.12,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "mypy>=1.13.0",
    "ruff>=0.8.1",
    "black>=24.10.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "isort>=5.13.2",
]

[tool.isort]
profile = "black"
